<resources>
    <string name="app_launch_name">Camping.do</string>
    <string name="app_name">Camping.do</string>
    <!-- <string name="smart_checklist_management">맞춤 체크리스트 관리</string> -->
    <string name="smart_checklist_management">Equipment Checklist Group</string>
    <!-- <string name="holdings_equipment_management">보유 장비 관리</string> -->
    <string name="holdings_equipment_management">Holding Equipment</string>
    <!-- <string name="holdings_equipment_list">보유 장비 리스트</string> -->
    <string name="holdings_equipment_list">Holding equipment list</string>
    <!-- <string name="equipment_detail">장비 상세</string> -->
    <string name="equipment_detail">Equipment details</string>
    <!-- <string name="equipment_registration">장비 등록</string> -->
    <string name="equipment_registration">Equipment registration</string>
    <!-- <string name="equipment_modify">장비 수정</string> -->
    <string name="equipment_modify">Equipment modify</string>
    <!-- <string name="my_check_list">나만의 장비 체크 리스트</string> -->
    <string name="my_check_list">My equipment checklist group</string>
    <!-- <string name="check_list_group">체크 리스트 그룹</string> -->
    <string name="check_list_group">Checklist group</string>
    <!-- <string name="check_list_group_registration">체크 리스트 그룹 등록</string> -->
    <string name="check_list_group_registration">Checklist group registration</string>
    <!-- <string name="check_list_group_modification">체크 리스트 그룹 수정</string> -->
    <string name="check_list_group_modification">Checklist group modify</string>
    <!-- <string name="add_check_list_group_theme">테마 그룹 추가</string> -->
    <string name="add_check_list_group_theme">Add Theme Group</string>
    <!-- <string name="completion">완료</string> -->
    <string name="completion">Completion</string>
    <!-- <string name="confirm">확인</string> -->
    <string name="confirm">Confirm</string>
    <!-- <string name="cancel">취소</string> -->
    <string name="cancel">Cancel</string>
    <!-- <string name="category">카테고리</string> -->
    <string name="category">Category</string>
    <!-- <string name="add_category">카테고리 추가</string> -->
    <string name="add_category">Category add</string>
    <!-- <string name="category_total">전체</string> -->
    <string name="category_total">Total</string>
    <!-- <string name="category_name_tent">텐트</string> -->
    <string name="category_name_tent">Tent</string>
    <!-- <string name="category_name_tarp">타프</string> -->
    <string name="category_name_tarp">Tarp</string>
    <!-- <string name="category_name_table">테이블</string> -->
    <string name="category_name_table">Table</string>
    <!-- <string name="category_name_chair">의자</string> -->
    <string name="category_name_chair">Chair</string>
    <!-- <string name="add">추가</string> -->
    <string name="add">Add</string>
    <!-- <string name="edit">편집</string> -->
    <string name="edit">Edit</string>
    <!-- <string name="delete">삭제</string> -->
    <string name="delete">Delete</string>
    <!-- <string name="modify">수정</string> -->
    <string name="modify">Modify</string>
    <!-- <string name="setting">설정</string> -->
    <string name="setting">Setting</string>
    <!-- <string name="product_name">제품 명</string> -->
    <string name="product_name">Product Name</string>
    <!-- <string name="product_maker">제조 회사</string> -->
    <string name="product_maker">Product Company</string>
    <!-- <string name="purchase_date">구입 날짜</string> -->
    <string name="purchase_date">Purchase Date</string>
    <!-- <string name="purchase_price">구입 가격</string> -->
    <string name="purchase_price">Purchase Price</string>
    <!-- <string name="purchase_amount">구입 수량</string> -->
    <string name="purchase_amount">Purchase Quantity</string>
    <!-- <string name="comment">메모</string> -->
    <string name="comment">Memo</string>
    <!-- <string name="regist_picture_info">* 이미지 첨부는 최대 3장까지 지원합니다.</string> -->
    <string name="regist_picture_info">* The Image attachment is 3 maximums.</string>
    <!-- <string name="registration">등록</string> -->
    <string name="registration">Registration</string>
    <!-- <string name="image_attach">이미지 첨부</string> -->
    <string name="image_attach">Image attachment</string>
    <!-- <string name="image_registration">이미지 등록</string> -->
    <string name="image_registration">Image registration</string>
    <!-- <string name="default_theme_image_upload">앱 기본 제공 사진 업로드</string> -->
    <string name="default_theme_image_upload">Built-in apps upload photos</string>
    <!-- <string name="default_theme_image">기본 제공 이미지</string> -->
    <string name="default_theme_image">Built-in image</string>
    <!-- <string name="image_album_upload">앨범 사진 업로드</string> -->
    <string name="image_album_upload">Upload Album Photos</string>
    <!-- <string name="image_camera_upload">카메라 촬영 업로드</string> -->
    <string name="image_camera_upload">Upload Camera</string>
    <!-- <string name="damage_image">손상된 이미지는 등록할 수 없습니다.</string> -->
    <string name="damage_image">Corrupted image can not be registered.</string>
    <!-- <string name="delete_upload_image">첨부된 이미지를 삭제하시겠습니까?</string> -->
    <string name="delete_upload_image">Are you sure you want to delete the attached image?</string>
    <!-- <string name="required_field_input">필드를 입력해 주세요.</string> -->
    <string name="required_field_input">Please enter the field.</string>
    <!-- <string name="required_field_select">필드를 선택해 주세요.</string> -->
    <string name="required_field_select">Please select the field.</string>
    <!-- <string name="required_theme_image">테마 이미지를 등록해 주세요.</string> -->
    <string name="required_theme_image">Please register themed image.</string>
    <!-- <string name="required_check_list">체크 리스트를 등록해 주세요.</string> -->
    <string name="required_check_list">Please register your checklist.</string>
    <string name="bullet">•</string>
    <string name="colon">:</string>
    <string name="hyphen">-</string>
    <!-- <string name="delete_mode_equipment_invalid">삭제할 장비가 없습니다.</string> -->
    <string name="delete_mode_equipment_invalid">Do not remove the equipment.</string>
    <!-- <string name="delete_mode_check_list_group_invalid">삭제할 테마그룹이 없습니다.</string> -->
    <string name="delete_mode_check_list_group_invalid">Do not remove the theme group.</string>
    <!-- <string name="group_theme_name">그룹 테마 명</string> -->
    <string name="group_theme_name">Theme Group Name</string>
    <!-- <string name="check_list">체크 리스트</string> -->
    <string name="check_list">Checklist</string>
    <!-- <string name="direct_input">직접 입력</string> -->
    <string name="direct_input">Direct input</string>
    <!-- <string name="get_holdings_equipment_list">보유 장비리스트에서 가져오기</string> -->
    <string name="get_holdings_equipment_list">Import from holding equipment list</string>
    <!-- <string name="field_date">출정 날짜</string> -->
    <string name="field_date">Camping Date</string>
    <!-- <string name="field_d_day">출정 D-day</string> -->
    <string name="field_d_day">Camping D-day</string>
    <!-- <string name="today">오늘</string> -->
    <string name="today">Today</string>
    <!-- <string name="field_alarm_guide">출정 전날, 체크리스트 상태의 알림 수신여부 설정\n(체크되지 않은 아이템이 있는 경우에만 알림)</string> -->
    <string name="field_alarm_guide">The day before camping, checklist set whether status notifications.\n(Notification only if you have not checked items)</string>
    <!-- <string name="field_alarm_time_set_guide">출정 전날, 체크리스트 상태의 알림 수신 시간</string> -->
    <string name="field_alarm_time_set_guide">The day before camping, time of receiving notification checklist states</string>
    <!-- <string name="check_or_uncheck">준비 여부</string> -->
    <string name="check_or_uncheck">Ready Status</string>
    <!-- <string name="check_list_item">물품</string> -->
    <string name="check_list_item">Item</string>
    <!-- <string name="all_delete">전체 삭제</string> -->
    <string name="all_delete">Delete All</string>
    <!-- <string name="no_holdings_equipment">등록된 보유 장비가 없습니다.</string> -->
    <string name="no_holdings_equipment">No registered holding equipment.</string>
    <!-- <string name="no_longer_registe_holdings_equipment">더이상 등록할 보유 장비가 없습니다.</string> -->
    <string name="no_longer_registe_holdings_equipment">There is no longer registered to hold equipment.</string>
    <!-- <string name="already_exist_category">동일한 카테고리가 이미 있습니다.</string> -->
    <string name="already_exist_category">The same category already.</string>
    <!-- <string name="close">닫기</string> -->
    <string name="close">Close</string>
    <!-- <string name="item_not_ready">준비되지 않은 물품이 있습니다.\n</string> -->
    <string name="item_not_ready">There is the forgetting thing.\n</string>
    <!-- <string name="enjoy_camping">잊으신 물품은 없는지 마지막으로 확인해보시고\n즐거운 캠핑 되세요.^^</string> -->
    <string name="enjoy_camping">Please check lastly whether there is no forgetting thing.\nHave a nice camping.^^</string>
    <!-- <string name="app_version">앱 버전</string> -->
    <string name="app_version">App Version</string>
    <!-- <string name="no_check_list">등록된 체크리스트가 없습니다.</string> -->
    <string name="no_check_list">No registered checklist.</string>
    <!-- <string name="release_delete_mode_guide">삭제모드를 해제하려면 메뉴버튼을 클릭해주세요.</string> -->
    <string name="release_delete_mode_guide">To turn off the delete mode, please click the menu button.</string>
    <!-- <string name="version">Version</string> -->
    <string name="version">Version</string>
    <!-- <string name="cancel_modification">수정을 취소 하시겠습니까?</string> -->
    <string name="cancel_modification">Are you sure you want to cancel your modifications?</string>
    <!-- <string name="yes">예</string> -->
    <string name="yes">Yes</string>
    <!-- <string name="no">아니오</string> -->
    <string name="no">No</string>
    <!-- <string name="app_exit">앱을 종료합니다.</string> -->
    <string name="app_exit">Exit the app.</string>

    <!-- <string name="disable_edit_checklist_item">보유 장비리스트에서 가져온 항목은 편집이 불가합니다.</string> -->
    <string name="disable_edit_checklist_item">Item imported from Holding equipment list can not be edited.</string>

    <!-- AdMob ad unit ID -->
    <string name="banner_type_1_unit_id">ca-app-pub-9654869626498068/1092898837</string>
</resources>
